第二章结束（密码修改未开发）

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,17 @@ mybatis.type-aliases-package=com.nowcoder.community.entity
 mybatis.configuration.useGeneratedKeys=true
 mybatis.configuration.mapUnderscoreToCamelCase=true
 
+# MailProperties  使用新浪邮箱
+spring.mail.host=smtp.sina.com
+spring.mail.port=465
+spring.mail.username=zhoujunlin178@sina.com
+spring.mail.password=28439c082f7eb02f
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.ssl.enable=true
+
+
+# community
+# 配置的本地域名
+community.path.domain=http://localhost:8080
+community.path.upload=d:/code/work/data/upload
+
